# ai-devtools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT_NOTES.md  README.md  package-lock.json
.github/workflows/: ci.yml  coding-interview_ci.yml  coverage.yml  deploy-todo.yml  deploy.yml  snake_ci.yml
01-todo/: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AUTO_DEPLOY_QUICKSTART.md  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  Makefile  PYTHONANYWHERE_STATIC_FILES.md  README.md  README_DEPLOY_PYTHONANYWHERE.md  TROUBLESHOOTING.md  WEBHOOK_SETUP.md  WSGI_PYTHONANYWHERE_marythought.py  homework.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
01-todo/tests/: conftest.py  (+9 more)
02-coding-interview/: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  TEST_EXAMPLES.md  docker-compose.yml  homework.md  package-lock.json  package.json  render.yaml  setup.sh
02-snake/: .env.example  DOCKER.md  INTEGRATION.md  README.md  RENDER.md  docker-compose.yml  homework.md  index.html  jest.config.js  openapi.yaml  package-lock.json  package.json  render.yaml  requirements.txt  tsconfig.json
02-snake/backend/: .dockerignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  verify_api.py
02-snake/backend/app/: auth.py  database.py  db_models.py  main.py  models.py
02-snake/backend/tests/: test_api.py
02-snake/backend/tests/integration/: __init__.py  conftest.py
02-snake/backend/tests_integration/: test_full_flow.py
03-mcp/: homework.md  main.py  pyproject.toml  search.py  test.py
(+87 files in other folders)
